<resources>
    <string name="app_name">Caristocrat</string>
    <string name="g_api_key">AIzaSyBuvqtq7MJwPiS7EIRUqbGVsmxpXUzC29s</string>
    <string name="close_app">Close App ?</string>
    <string name="do_you_want_close_app">Are you sure you want to close the app?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cars">Cars</string>
    <string name="auto_life">Auto Life</string>
    <string name="education">Education</string>
    <string name="women_only">Women Only</string>
    <string name="consultant">Consultant</string>
    <string name="luxury">Luxury</string>
    <string name="caristo_club">Caristo Club</string>
    <string name="skip">SKIP</string>
    <string name="next">NEXT</string>
    <string name="welcome_to">WELCOME TO</string>
    <string name="walkthrough_desc">Sample text:As harry squelched the deserted corridor he come across somebody who looked just as preoccupied as he was.Nearly Headless Nick, the ghost of Gryffindor Tower was starting morosely out of a window</string>
    <string name="stay_ahead_of_the">STAY AHEAD OF THE</string>
    <string name="competition_always">COMPETITION ALWAYS</string>
    <string name="walkthrough_end_detail">Create an account with The Consultant to stay connected at all times, use multiple devices with the same account, get smart alerts and much more.</string>
    <string name="sample_text">The Android Toolbar has replaced the old action bar. It was introduced in API 21 (Android 5.0 Lollipop). In this tutorial we are going to implement it using the support v7 library. Our goal is to implement a toolbar with icons which is supported by older versions of Android as well. The Android Toolbar has replaced the old action bar. It was introduced in API 21 (Android 5.0 Lollipop). In this tutorial we are going to implement it using the support v7 library. Our goal is to implement a toolbar with icons which is supported by older versions of Android as well. The Android Toolbar has replaced the old action bar. It was introduced in API 21 (Android 5.0 Lollipop). In this tutorial we are going to implement it using the support v7 library. Our goal is to implement a toolbar with icons which is supported by older versions of Android as well. The Android Toolbar has replaced the old action bar. It was introduced in API 21 (Android 5.0 Lollipop). In this tutorial we are going to implement it using the support v7 library. Our goal is to implement a toolbar with icons which is supported by older versions of Android as well. The Android Toolbar has replaced the old action bar. It was introduced in API 21 (Android 5.0 Lollipop). In this tutorial we are going to implement it using the support v7 library. Our goal is to implement a toolbar with icons which is supported by older versions of Android as well. The Android Toolbar has replaced the old action bar. It was introduced in API 21 (Android 5.0 Lollipop). In this tutorial we are going to implement it using the support v7 library. Our goal is to implement a toolbar with icons which is supported by older versions of Android as well. The Android Toolbar has replaced the old action bar. It was introduced in API 21 (Android 5.0 Lollipop). In this tutorial we are going to implement it using the support v7 library. Our goal is to implement a toolbar with icons which is supported by older versions of Android as well. The Android Toolbar has replaced the old action bar. It was introduced in API 21 (Android 5.0 Lollipop). In this tutorial we are going to implement it using the support v7 library. Our goal is to implement a toolbar with icons which is supported by older versions of Android as well. The Android Toolbar has replaced the old action bar. It was introduced in API 21 (Android 5.0 Lollipop). In this tutorial we are going to implement it using the support v7 library. Our goal is to implement a toolbar with icons which is supported by older versions of Android as well. The Android Toolbar has replaced the old action bar. It was introduced in API 21 (Android 5.0 Lollipop). In this tutorial we are going to implement it using the support v7 library. Our goal is to implement a toolbar with icons which is supported by older versions of Android as well. The Android Toolbar has replaced the old action bar. It was introduced in API 21 (Android 5.0 Lollipop). In this tutorial we are going to implement it using the support v7 library. Our goal is to implement a toolbar with icons which is supported by older versions of Android as well. The Android Toolbar has replaced the old action bar. It was introduced in API 21 (Android 5.0 Lollipop). In this tutorial we are going to implement it using the support v7 library. Our goal is to implement a toolbar with icons which is supported by older versions of Android as well.</string>
    <string name="signup">SIGNUP</string>
    <string name="already_a_member">Already a member?</string>
    <string name="click_here">Click Here</string>
    <string name="new_article">New Article</string>
    <string name="new_articles">New Articles</string>
    <string name="dummy_date">July 04</string>
    <string name="dummy_views_count">0</string>
    <string name="dummy_likes_count">0</string>
    <string name="dummy_comments_count">0</string>
    <string name="featured_this_week">Featured This Week</string>
    <string name="no_link_found">No Link Found</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_comment">Delete Comment</string>
    <string name="delete_comment_comfirmation">Are you sure you want to delete this Comment ?</string>
    <string name="comment_deleted_successful">Comment Deleted Successfully</string>
    <string name="comment_updated_successful">Comment Updated Successfully</string>
    <string name="news">NEWS</string>
    <string name="news_category_desc">Happenings from around the globe</string>
    <string name="events">EVENTS</string>
    <string name="interviews">INTERVIEWS</string>
    <string name="test_drives">TEST DRIVES</string>
    <string name="motor_sports">MOTOR SPORTS</string>
    <string name="why_you_really_want_that_ferrari">Why you really want that Ferrari?</string>
    <string name="_174_comments">174 Comments</string>
    <string name="write_a_comment">Write a comment…</string>
    <string name="video_internet_error">The details contain a video, Kindly, connect through internet to play the video</string>
    <string name="youtube_video_not_found">Youtube link is not found</string>
    <string name="about_me">About Me</string>
    <string name="my_favorites">My Favourites</string>
    <string name="add_cars_you_own">Add Cars You Own</string>
    <string name="please_select">Please Select</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="you_can_also_register_using_n_your_social_media_accounts">YOU CAN ALSO REGISTER USING \nYOUR SOCIAL MEDIA ACCOUNTS</string>
    <string name="welcome_back">WELCOME BACK</string>
    <string name="signin_sub_heading">Glad you could join us again. \nPlease enter your details to login</string>
    <string name="sign_in">SIGN IN</string>
    <string name="trouble_login_in">Trouble Logging in?</string>
    <string name="click_here_forget_pwd">Click here to retrieve your password.</string>
    <string name="click_here_to_create_a_new_account">Click here to create a new account</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="forgot_pwd_sub_heading">Enter your email address and we\'ll send you a link to reset your password</string>
    <string name="submit">SUBMIT</string>
    <string name="email_verification">EMAIL VERIFICATION</string>
    <string name="email_verification_sub_heading">A verification code has been sent to your email address</string>
    <string name="verify">VERIFY</string>
    <string name="didn_t_receive_code">Didn\'t receive code ?</string>
    <string name="click_here_to_resend_code_or_wait">Click here to resend code </string>
    <string name="add_car">Add Car</string>
    <string name="choose_brand">Choose Brand / Make</string>
    <string name="choose_model">Choose Model</string>
    <string name="choose_year">Choose Year</string>
    <string name="choose_variant">Choose Variant</string>
    <string name="_00_00">00:00</string>
    <string name="report_this_listing">Report This Listing</string>
    <string name="spam">Spam or misleading</string>
    <string name="fake_details">Fake Details</string>
    <string name="other">Other</string>
    <string name="enter">Enter</string>
    <string name="skip_signin">Login As Guest</string>
</resources>