<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/dp16">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp16"
            android:src="@drawable/add_own_car" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.2"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/choose_variant"
            android:textAllCaps="true"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_subtitle_1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp24"
            android:alpha="0.2"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/please_select"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp12" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp16"
            android:background="@drawable/bordered_item_rounded_more"
            android:drawableEnd="@drawable/downarrow"
            android:padding="@dimen/dp12"
            android:text="@string/choose_brand" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp16"
            android:background="@drawable/bordered_item_rounded_more"
            android:drawableEnd="@drawable/downarrow"
            android:padding="@dimen/dp12"
            android:text="@string/choose_model" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp16"
            android:background="@drawable/bordered_item_rounded_more"
            android:drawableEnd="@drawable/downarrow"
            android:padding="@dimen/dp12"
            android:text="@string/choose_year" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp32"
            android:background="@drawable/bordered_item_rounded_more"
            android:drawableEnd="@drawable/downarrow"
            android:padding="@dimen/dp12"
            android:text="@string/choose_variant" />

        <Button
            android:id="@+id/btnAddCar"
            style="@style/CustomButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:actionProviderClass="android.widget.ShareActionProvider"
            android:text="@string/add_car" />

    </LinearLayout>

</layout>