<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingStart="@dimen/dp26"
            android:paddingEnd="@dimen/dp26">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp20"
                android:fontFamily="@font/ailerons_typeface"
                android:padding="@dimen/dp10"
                android:text="@string/welcome_back"
                android:textAllCaps="true"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/sp26" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp25"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="@string/signin_sub_heading"
                android:textSize="@dimen/text_body_1" />

            <com.ingic.caristocrat.helpers.CustomTextInputLayout
                android:id="@+id/ilEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etEmail"
                    style="@style/RegistrationInputLayoutOptions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/email"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/email_address"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"

                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp0.5"
                    android:layout_marginTop="@dimen/dp4"
                    android:background="@color/colorTransparentGray" />

            </com.ingic.caristocrat.helpers.CustomTextInputLayout>

            <com.ingic.caristocrat.helpers.CustomTextInputLayout
                android:id="@+id/ilPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/etPassword"
                        style="@style/RegistrationInputLayoutOptions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableStart="@drawable/pass"
                        android:fontFamily="@font/poppins_regular"
                        android:hint="@string/password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLines="1"

                        />

                    <ImageView
                        android:id="@+id/ivShowPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingStart="@dimen/dp10"
                        android:paddingTop="@dimen/dp16"
                        android:paddingEnd="@dimen/dp10"
                        android:paddingBottom="@dimen/dp6"
                        android:src="@drawable/eye1" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp0.5"
                    android:layout_marginTop="@dimen/dp4"
                    android:background="@color/colorTransparentGray" />

            </com.ingic.caristocrat.helpers.CustomTextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp20"
                android:fontFamily="@font/poppins_medium"
                android:gravity="start"
                android:text="@string/trouble_login_in"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_body_2" />

            <TextView
                android:id="@+id/tvForgetPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp20"
                android:fontFamily="@font/poppins_regular"
                android:paddingTop="@dimen/dp10"
                android:paddingBottom="@dimen/dp10"
                android:text="@string/click_here_forget_pwd"
                android:textSize="@dimen/text_body_2" />

            <Button
                android:id="@+id/btnSignIn"
                style="@style/CustomButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp40"
                android:layout_marginBottom="@dimen/dp40"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/you_can_also_register_using_n_your_social_media_accounts"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/sp12" />

                <ImageButton
                    android:id="@+id/ibFb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp6"
                    android:background="@drawable/new_fb" />

                <ImageButton
                    android:id="@+id/ibGoogle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp6"
                    android:background="@drawable/new_google" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvSkip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/skip_signin"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_body_2" />

            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/dp20"
                android:fontFamily="@font/poppins_regular"
                android:padding="@dimen/dp10"
                android:text="@string/click_here_to_create_a_new_account"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_body_2" />

        </LinearLayout>

    </ScrollView>

</layout>