<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:background="@color/colorWhite"
       android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingEnd="@dimen/dp26"
        android:paddingStart="@dimen/dp26">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp20"
            android:padding="@dimen/dp10"
            android:text="@string/forgot_password"
            android:fontFamily="@font/ailerons_typeface"
            android:textAllCaps="true"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp26" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="@dimen/dp25"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/forgot_pwd_sub_heading"
            android:textSize="@dimen/text_body_1" />



        <com.ingic.caristocrat.helpers.CustomTextInputLayout
            android:id="@+id/ilEmail"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/dp20"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etEmail"
                style="@style/RegistrationInputLayoutOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/email"
                android:hint="@string/email_address"
                android:fontFamily="@font/poppins_regular"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:maxLines="1"

                />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp0.5"
                android:layout_marginTop="@dimen/dp4"
                android:background="@color/colorTransparentGray" />

        </com.ingic.caristocrat.helpers.CustomTextInputLayout>








        <Button
            android:id="@+id/btnSubmit"
            style="@style/CustomButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit" />
    </LinearLayout>

   </LinearLayout>
</layout>